--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+html {
+  scroll-snap-type: y mandatory;
+}
+
+.app {
+  display: grid;
+  place-items: center;
+  height: 100vh;
+  background-color:black;
+}
+ 
+ .app__top {
+  margin-bottom: 50px;
+} 
+.app__top > h1 {
   text-align: center;
+  color: cyan;
+}
+.app__logo {
+  height: 12vh;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__videos {
+  position: relative;
+  height: 65vh;
+  background-color:white;
+  width: 60%;
+  border-radius: 20px;
+  max-width: 450px;
+  max-height: 2000px;
+  overflow: scroll;
+  scroll-snap-type: y mandatory;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.app__videos::-webkit-scrollbar {
+  display: none;
+}  
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__videos {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
